<resources>
    <string name="app_name">My Application</string>
    <string name="Go_Back_to_Main_Menu">Go Back to Main Menu</string>
    <string name="Add_New_Student">Add New Student</string>
    <string name="View_All_Students">View All Students</string>
    <string name="Checked">Checked</string>
    <string name="Save">Checked</string>
    <string name="Go_Back">Go Back</string>
    <string name="Student_Name">Student Name</string>
    <string name="Student_ID">Student ID</string>
    <string name="View">View</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
</resources>